projetXML v0.1 sans xq ni rapport ni xslt2.0

--- a/www/parcours/specialites/SPE_IF.html
+++ b/www/parcours/specialites/SPE_IF.html
@@ -32,6 +32,106 @@
 				fondamentale.
 			</div><div xmlns="" class="titre">Programme et enseignements </div><div xmlns="" class="contenu">
 		Programme du S
-		3
+		3<li>Unites obligatoires</li><li><a href="../../enseignements/ENSINCU1.html"> Algorithmique et complexite 
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU2.html">Logique, automates et aspects formels de la theorie des langages
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU3.html">Statistique inferentielle
+				(
+				3
+				credits)
+			</a></li><li>15 credits a choisir (validation requise)</li><li><a href="../../enseignements/ENSINCU4.html">Nouveaux defis en apprentissage
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU5.html">Theorie de l'apprentissage
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU6.html">Inference grammaticale
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU7.html">Apprentissage numerique
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU8.html">Fouille de bases de donnees
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU9.html">Entrepôts de donnees
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU10.html">Fouille de donnees avancee
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU11.html"> Geometrie discrete 
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU12.html">Algorithmique des graphes et reseaux
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU13.html">Espaces metriques : structure et algorithmiques
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU14.html">Optimisation combinatoire et programmation en nombres entiers
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU15.html">Logiques et jeux
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU16.html"> Algorithmique distribuee 2 
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU17.html"> Verification et securite 
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU18.html">Modeles du parallelisme
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU19.html"> Modeles et connaissances linguistiques pour le TAL
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU20.html">Syntaxe et semantique : modeles et outils
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU21.html"> Modeles numeriques pour le TAL 
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU22.html">Applications du Traitement Automatique de la Langue (TAL)
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU23.html"> Algorithmique des chaines de caracteres 
+				(
+				3
+				credits)
+			</a></li>
 		Programme du S
-		4</div><div xmlns="" class="contenu"/></div></body></html>
+		4<li>Unites obligatoires</li><li><a href="../../enseignements/ENSINDU1.html">«Communication scientifique»
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINDU2.html">Initiation a la recherche
+				(
+				27
+				credits)
+			</a></li></div><div xmlns="" class="contenu"/></div></body></html>
