--- a/www/parcours/specialites/SPE_ISL.html
+++ b/www/parcours/specialites/SPE_ISL.html
@@ -64,9 +64,61 @@
 				
 			</div><div xmlns="" class="titre">Programme et enseignements </div><div xmlns="" class="contenu">
 		Programme du S
-		3
+		3<li>TC des parcours FSI et ISL</li><li><a href="../../enseignements/ENSINCU27.html">Anglais 2
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU28.html">Communication 2
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU29.html">Fiabilite logicielle 1
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU30.html">Plateforme JEE
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU31.html">Systemes heterogenes
+				(
+				3
+				credits)
+			</a></li><li>Unite d'enseignement a bonus</li><li><a href="../../enseignements/ENSINCU67.html">Projet d'entreprise
+				(
+				3
+				credits)
+			</a></li><li>Unites obligatoires</li><li><a href="../../enseignements/ENSINCU36.html">Administration systeme et reseau
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU37.html">Methodes de developpement 
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU38.html">Architecture logicielle JEE
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU39.html">Integration des donnees
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU40.html">Administration et alimentation de BD
+				(
+				3
+				credits)
+			</a></li>
 		Programme du S
-		4</div><div xmlns="" class="titre">
+		4<li>Unites obligatoires</li><li><a href="../../enseignements/ENSINDU3.html">Projet industriel de mise en application
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINDU4.html">Stage en entreprise
+				(
+				24
+				credits)
+			</a></li></div><div xmlns="" class="titre">
 				Politique des stages
 			</div><div xmlns="" class="contenu">
 				
