--- a/www/parcours/specialites/SPE_MASTER1.html
+++ b/www/parcours/specialites/SPE_MASTER1.html
@@ -30,9 +30,109 @@
 				
 			</div><div xmlns="" class="titre">Programme et enseignements </div><div xmlns="" class="contenu">
 		Programme du S
-		1
+		1<li>TRONC COMMUN</li><li><a href="../../enseignements/ENSINAU1.html">Genie Logiciel
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU2.html">Complexite
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU3.html">Reseaux
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU4.html">Programmation fonctionnelle
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU12.html">BDR : approfondissement
+				(
+				3
+				credits)
+			</a></li><li>Falcultatif</li><li><a href="../../enseignements/ENSINAU6.html">Programmation logique
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU7.html">Outils de l'internet
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU8.html">Systeme embarque
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU9.html">Fondamentaux pour l'ingenierie des langues
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU10.html">Modeles a evenements discrets
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU13.html">SPORT
+				(
+				3
+				credits)
+			</a></li>
 		Programme du S
-		2</div><div xmlns="" class="titre">
+		2<li>TRONC COMMUN</li><li><a href="../../enseignements/ENSINBU1.html">ANGLAIS
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU2.html">COMMUNICATION
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU4.html">XML
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU5.html">Algorithmique et recherche operationnelle
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU15.html">Programmation parallele
+				(
+				3
+				credits)
+			</a></li><li>FALCULTATIF</li><li><a href="../../enseignements/ENSINBU6.html">Projet
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU7.html">Stage de deux mois
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU8.html">Systeme embarque
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU9.html">Fondamentaux pour l'ingenierie des langues
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU10.html">Modeles a evenements discrets
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU11.html">Initiation a la fouille de donnees et a l'optimisation des SGBD
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU12.html">BDR : approfondissement
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINAU13.html">SPORT
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINBU16.html">Introduction a l'apprentissage automatique
+				(
+				3
+				credits)
+			</a></li></div><div xmlns="" class="titre">
 				Politique des stages
 			</div><div xmlns="" class="contenu">
 				La formation par le biais des projets est largement encouragee :
