--- a/www/parcours/specialites/SPE_FSI.html
+++ b/www/parcours/specialites/SPE_FSI.html
@@ -63,9 +63,57 @@
 				
 			</div><div xmlns="" class="titre">Programme et enseignements </div><div xmlns="" class="contenu">
 		Programme du S
-		3
+		3<li>TC des parcours FSI et ISL</li><li><a href="../../enseignements/ENSINCU27.html">Anglais 2
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU28.html">Communication 2
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU29.html">Fiabilite logicielle 1
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU30.html">Plateforme JEE
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU31.html">Systemes heterogenes
+				(
+				3
+				credits)
+			</a></li><li>Unite d'enseignement a bonus</li><li><a href="../../enseignements/ENSINCU67.html">Projet d'entreprise
+				(
+				3
+				credits)
+			</a></li><li>Unites obligatoires</li><li><a href="../../enseignements/ENSINCU32.html">Securite internet et reseau
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU33.html">Fiabilite logicielle 2
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU34.html">Qualite
+				(
+				3
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINCU35.html">Securite des systemes embarques
+				(
+				3
+				credits)
+			</a></li>
 		Programme du S
-		4</div><div xmlns="" class="titre">
+		4<li>Unites obligatoires</li><li><a href="../../enseignements/ENSINDU3.html">Projet industriel de mise en application
+				(
+				6
+				credits)
+			</a></li><li><a href="../../enseignements/ENSINDU4.html">Stage en entreprise
+				(
+				24
+				credits)
+			</a></li></div><div xmlns="" class="titre">
 				Politique des stages
 			</div><div xmlns="" class="contenu">
 				Les stages sont optionnels en premiere annee (2
