--- a/www/parcours/specialites/SPE_IF.html
+++ b/www/parcours/specialites/SPE_IF.html
@@ -6,7 +6,7 @@
 				Nom
 			</div><div xmlns="" class="contenu">Informatique fondamentale (IF)</div><div xmlns="" class="titre">
 			Responsable
-		</div><div xmlns="" class="contenu"><a href="../../intervenants/II1000 IN4595.html">Pierre-Alain REYNIER Thierry ARTIeRES<br/></a></div><div xmlns="" class="titre">
+		</div><div xmlns="" class="contenu"><a href="../../intervenants/II1000.html">Thierry ARTIeRES<br/></a></div><div xmlns="" class="titre">
 				Lieu d'enseignement</div><div xmlns="" class="contenu">Campus Luminy</div><div xmlns="" class="titre">
 				Competences a acquerir</div><div xmlns="" class="contenu">En termes de competences cette specialite a pour but de
 				developper chez les etudiants leur capacite a raisonner et a for, et
