--- a/www/intervenants/IN98.html
+++ b/www/intervenants/IN98.html
@@ -6,5 +6,5 @@
 							Téléphone :
 							0413551311</li><li>
 							Adresse électronique :
-							<a href="#">françois.denis@lif.univ-mrs.fr</a></li></ul></div><br/><center><a class="btn btn-default" href="#" onclick="javascript:history.back();">Revenir a la liste</a></center></div></div><div class="text-center"><div class="container"><div class="row"><div class="col-md-1"><img src="../../css/img/facebook.png" alt="logo"/></div><div class="col-md-1"><img src="../../css/img/linkedin.png" alt="logo"/></div><div class="col-md-1"><img src="../../css/img/twitter.png" alt="logo"/></div><div class="col-md-9"><h5>© 2018 Aix Marseille Université - Tous droits réservés
+							<a href="mailto:">françois.denis@lif.univ-mrs.fr</a></li></ul></div><br/><center><a class="btn btn-default" href="#" onclick="javascript:history.back();">Revenir a la liste</a></center></div></div><div class="text-center"><div class="container"><div class="row"><div class="col-md-1"><img src="../../css/img/facebook.png" alt="logo"/></div><div class="col-md-1"><img src="../../css/img/linkedin.png" alt="logo"/></div><div class="col-md-1"><img src="../../css/img/twitter.png" alt="logo"/></div><div class="col-md-9"><h5>© 2018 Aix Marseille Université - Tous droits réservés
 										</h5></div></div></div></div></body></html>
